# rust-income-calc

./: Cargo.toml
src/: main.rs
